# Pattern_Matching

./: .gitignore  .gitmodules  CMakeLists.txt  DictionaryMatch.cpp  PatternMatching.cpp  PatternMathcingStl.cpp  README.md  ReadMe.docx  concepts.txt
apps/AhoCorasick/: AhoCorasickMatching.cpp  CMakeLists.txt
apps/DictionaryMatch/: CMakeLists.txt  DictionaryMatch.cpp
apps/PatternMatching/: CMakeLists.txt  PatternMatching.cpp  PatternMathcingStl.cpp
benchmarks/: AllPatternMatchers.cpp  CMakeLists.txt
benchmarks/data/: concepts.txt
include/: Dictionary.h  PatternMatchers.h
src/: Dictionary.cpp
tests/: CMakeLists.txt  test_Dictionary.cpp  test_PatternMatchers.cpp
