
add_executable(PatternMatching PatternMatching.cpp)
target_link_libraries(PatternMatching stdc++fs)
target_include_directories(PatternMatching PUBLIC ../../include)

add_executable(PatternMatchingStl PatternMathcingStl.cpp)
target_link_libraries(PatternMatchingStl stdc++fs)
target_include_directories(PatternMatchingStl PUBLIC ../../include)